--- a/trunk/ nhom06vienthonga/Source/vienthonga_06/nbproject/project.properties
+++ b/trunk/ nhom06vienthonga/Source/vienthonga_06/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=-//W3C//DTD HTML 3.2 Final//EN
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -44,10 +45,9 @@ j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.6.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-util.jar
-j2ee.server.type=Tomcat70
+j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate-support.classpath}:\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
     ${file.reference.commons-digester-1.8.1.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
@@ -61,6 +61,7 @@ javac.classpath=\
     ${file.reference.tiles-core-2.1.2.jar}:\
     ${file.reference.tiles-jsp-2.1.2.jar}:\
     ${file.reference.tiles-servlet-2.1.2.jar}:\
+    ${libs.hibernate-support.classpath}:\
     ${libs.ejb3-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
